# docs/swagger.yaml
@@ -19,13 +19,26 @@ definitions:
     - end_time
     - start_time
     type: object
-  handler.CreateUserRequest:
+  handler.LoginRequest:
     properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  handler.RegisterRequest:
+    properties:
+      email:
+        type: string
       login:
         type: string
       password:
         type: string
     required:
+    - email
     - login
     - password
     type: object
@@ -47,6 +60,8 @@ definitions:
     type: object
   handler.UpdateUserRequest:
     properties:
+      email:
+        type: string
       id:
         type: integer
       login:
@@ -54,6 +69,7 @@ definitions:
       password:
         type: string
     required:
+    - email
     - id
     - login
     - password
@@ -96,16 +112,185 @@ definitions:
     type: object
   model.User:
     properties:
+      created_at:
+        type: string
+      email:
+        type: string
       id:
         type: integer
+      image_url:
+        type: string
       login:
         type: string
       password:
-        type: string
+        items:
+          type: integer
+        type: array
     type: object
 info:
   contact: {}
 paths:
+  /api/v1/auth/{user_id}:
+    get:
+      description: Check if user is authenticated.
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Check auth
+      tags:
+      - user
+  /api/v1/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Authenticate a user with the provided credentials.
+      parameters:
+      - description: User credentials
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/handler.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              body:
+                properties:
+                  user_id:
+                    type: integer
+                type: object
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+      summary: Login a user
+      tags:
+      - user
+  /api/v1/auth/logout:
+    post:
+      consumes:
+      - application/json
+      description: Logout a user. Delete session.
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+      summary: Logout a user
+      tags:
+      - user
+  /api/v1/auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Register a new user with the provided details.
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/handler.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            properties:
+              body:
+                properties:
+                  user_id:
+                    type: integer
+                type: object
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            properties:
+              err:
+                type: string
+            type: object
+      summary: Register a new user
+      tags:
+      - user
   /api/v1/trip:
     post:
       consumes:
@@ -293,39 +478,6 @@ paths:
       tags:
       - place
   /api/v1/user:
-    post:
-      consumes:
-      - application/json
-      description: Creates a new user with the provided details.
-      parameters:
-      - description: User data
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/handler.CreateUserRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Create a new user
-      tags:
-      - user
     put:
       consumes:
       - application/json
@@ -347,20 +499,30 @@ paths:
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
+            properties:
+              err:
+                type: string
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            properties:
+              err:
+                type: string
             type: object
         "404":
           description: Not Found
           schema:
-            additionalProperties:
-              type: string
+            properties:
+              err:
+                type: string
             type: object
         "500":
           description: Internal Server Error
           schema:
-            additionalProperties:
-              type: string
+            properties:
+              err:
+                type: string
             type: object
       summary: Update user details
       tags:
