# internal/domain/model/auth.go
@@ -1,0 +1,14 @@
+package model
+
+import "time"
+
+type Session struct {
+	Token     string    `json:"token"`
+	ExpiresAt time.Time `json:"expires_at"`
+	UserID    int       `json:"-"`
+}
+
+type Credentials struct {
+	Password []byte `json:"password"`
+	Email    string `json:"email"`
+}
