# internal/domain/model/user.go
@@ -1,7 +1,12 @@
 package model
 
+import "time"
+
 type User struct {
-	ID       int    `json:"id"`
-	Login    string `json:"login"`
-	Password string `json:"password"`
+	ID        int       `json:"id"`
+	Login     string    `json:"login"`
+	Email     string    `json:"email"`
+	Password  []byte    `json:"password"`
+	ImageURL  string    `json:"image_url"`
+	CreatedAt time.Time `json:"created_at"`
 }
